--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "feathers-mongoose": "^6.1.4",
     "helmet": "^3.13.0",
     "mongoose": "^5.3.0",
+    "mongoose-unique-array": "^0.2.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.0.0"
   },
